# voice-text-archive

./: .env.example  README.md  audio_transcriber.py  mypy.ini  pyproject.toml  send_message.py  test.py
.github/workflows/: python_ci.yml
api/: app.py
api/models/: message.py
api/routers/: message.py
