[tool.poetry]
name = "whispertonotion"
version = "0.1.0"
description = ""
authors = ["gilmi <65973449+gilmiwired@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
sounddevice = "^0.5.0"
openai = "^1.40.6"
wave = "^0.0.2"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
google-generativeai = "^0.7.2"

[tool.poetry.dev-dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.1"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20240712"

[tool.mypy]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
